--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Modern Interactive Periodic Table</title>
-    <meta name="description" content="Welcome to the Modern Interactive Periodic Table by Rifatuzzaman & Urfa Hasan Fattah. Explore elements, filter categories, and learn chemistry interactively.">
-    <meta name="keywords" content="periodic table, interactive chemistry, modern periodic table, rifatuzzaman, urfa hasan fattah">
+    <title>Contact Us - Modern Interactive Periodic Table</title>
+    <meta name="description" content="Contact Rifatuzzaman & Urfa Hasan Fattah, creators of the Modern Interactive Periodic Table, for feedback or inquiries.">
+    <meta name="keywords" content="contact periodic table, chemistry contact, rifatuzzaman, urfa hasan fattah">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -23,80 +23,20 @@
             color: #ffffff;
         }
         h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 80px;
-            font-weight: 800;
+            font-size: 60px;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 3px;
-            margin: 20px 0;
+            margin: 30px 0;
             text-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-            animation: fadeIn 1s ease-in; /* Added fade-in animation */
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: 400;
-            margin: 10px 0 30px;
-            color: rgba(255, 255, 255, 0.9);
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
         .container {
-            max-width: 1000px;
+            max-width: 800px;
             margin: 0 auto 40px auto;
             padding: 20px;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            max-width: 700px;
-            margin: 20px auto;
-            color: rgba(255, 255, 255, 0.9);
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 15px 30px;
-            font-size: 18px;
-            font-weight: 700;
-            color: #fff;
-            background: #00e676;
-            text-decoration: none;
-            border-radius: 5px;
-            margin: 10px;
-            transition: background 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-        .cta-button:hover {
-            background: #00c853;
-            transform: translateY(-3px);
-        }
-        .preview {
-            margin: 40px 0;
-        }
-        .preview p {
-            font-size: 20px;
-            font-weight: 700;
-            margin-bottom: 15px;
-        }
-        .preview img {
-            max-width: 100%;
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-        .social-links {
-            margin-top: 30px;
-        }
-        .social-links a {
-            color: #ffffff;
-            font-size: 28px;
-            margin: 0 20px;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        .social-links a:hover {
-            color: #00e676;
         }
         /* Navbar styles (copied from index.html) */
         .navbar {
@@ -176,6 +116,59 @@
             margin-right: 10px;
             font-size: 20px;
         }
+        /* Contact form styles */
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+        label {
+            font-size: 16px;
+            text-align: left;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 14px;
+            border: none;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.9);
+            color: #333;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        textarea {
+            min-height: 100px;
+            resize: vertical;
+        }
+        button {
+            padding: 12px 20px;
+            font-size: 16px;
+            font-weight: 700;
+            color: #fff;
+            background: #00e676;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+        button:hover {
+            background: #00c853;
+        }
+        .social-links {
+            margin-top: 20px;
+        }
+        .social-links a {
+            color: #ffffff;
+            font-size: 24px;
+            margin: 0 15px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .social-links a:hover {
+            color: #00e676;
+        }
         /* Footer styles (with CC license) */
         footer {
             margin-top: 30px;
@@ -216,12 +209,9 @@
         }
         /* Responsive adjustments */
         @media (max-width: 600px) {
-            h1 { font-size: 40px; }
-            h2 { font-size: 18px; }
-            p { font-size: 16px; }
-            .cta-button { padding: 12px 20px; font-size: 16px; }
-            .preview p { font-size: 18px; }
-            .social-links a { font-size: 24px; margin: 0 15px; }
+            h1 { font-size: 36px; }
+            .container { padding: 15px; }
+            form { max-width: 100%; }
             footer, footer p { font-size: 10px; }
             footer img { height: 14px !important; }
         }
@@ -229,7 +219,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="brand"><i class="fas fa-atom"></i>Periodic Table</div>
+        <div class="brand"><i class="fas fa-atom"></i> Periodic Table</div>
         <button class="hamburger" aria-label="Open menu" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </button>
@@ -248,21 +238,24 @@
     </div>
 
     <div class="container">
-        <h1>Modern <i class="fas fa-atom"></i>  Periodic Table</h1>
-        <h2>Discover the Elements Like Never Before</h2>
-        <p>Welcome to the Modern Interactive <i class="fas fa-atom"></i>  Periodic Table, created by Rifatuzzaman & Urfa Hasan Fattah. Explore all 118 elements with interactive filtering, search by name or symbol, and dive into the fascinating world of chemistry.</p>
-        <a href="home.html" class="cta-button">Explore the <i class="fas fa-atom"></i> Periodic Table</a>
-        <a href="contact.html" class="cta-button">Get in Touch</a>
-        <div class="preview">
-            <p>Preview the Interactive Table:</p>
-            <img src="periodic-table-preview.jpg" alt="Periodic Table Preview">
-        </div>
+        <h1>Contact Us</h1>
+        <p>Have questions or feedback about the Modern Interactive <i class="fas fa-atom"></i> Periodic Table? Reach out to Rifatuzzaman & Urfa Hasan Fattah!</p>
+        <form name="contact" method="POST" data-netlify="true">
+            <input type="hidden" name="form-name" value="contact">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
         <div class="social-links">
             <a href="https://github.com/rifatuzzaman-rifat" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="https://twitter.com" target="_blank" title="Twitter/X"><i class="fab fa-twitter"></i></a>
             <a href="https://facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" target="_blank" title="Linkedin"><i class="fab fa-linkedin"></i></a>
+<a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+<a href="https://linkedin.com" target="_blank" title="Linkedin"><i class="fab fa-linkedin"></i></a>
             <!-- Add more social links as needed -->
         </div>
     </div>
