--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <title>Contact Us - Modern Interactive Periodic Table</title>
     <meta name="description" content="Contact Rifatuzzaman & Urfa Hasan Fattah, creators of the Modern Interactive Periodic Table, for feedback or inquiries.">
     <meta name="keywords" content="contact periodic table, chemistry contact, rifatuzzaman, urfa hasan fattah">
+    <link rel="icon" href="atom-icon.ico" type="image/x-icon">
+    <link rel="icon" href="atom-icon-192x192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="atom-icon-512x512.png" sizes="512x512" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
