--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <title>About - Modern Interactive Periodic Table</title>
     <meta name="description" content="Learn about the Modern Interactive Periodic Table, created by Rifatuzzaman & Urfa Hasan Fattah, and the story behind this chemistry project.">
     <meta name="keywords" content="about periodic table, rifatuzzaman, urfa hasan fattah, interactive chemistry">
+    <link rel="icon" href="atom-icon.ico" type="image/x-icon">
+    <link rel="icon" href="atom-icon-192x192.png" sizes="192x192" type="image/png">
+     <link rel="icon" href="atom-icon-512x512.png" sizes="512x512" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
