--- a/atom-details.html
+++ b/atom-details.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to the Modern Interactive Periodic Table by Rifatuzzaman & Urfa Hasan Fattah. Explore elements, filter categories, and learn chemistry interactively.">
+    <meta name="keywords" content="periodic table, interactive chemistry, modern periodic table, rifatuzzaman, urfa hasan fattah">
     <title>Atom Details</title>
+    <link rel="icon" href="atom-icon.ico" type="image/x-icon">
+    <link rel="icon" href="atom-icon-192x192.png" sizes="192x192" type="image/png">
+     <link rel="icon" href="atom-icon-512x512.png" sizes="512x512" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
