--- a/about.html
+++ b/about.html
@@ -12,6 +12,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+    .logo {
+    height: 40px; /* Adjust based on your logo's aspect ratio */
+    width: auto; /* Maintains aspect ratio */
+    vertical-align: middle; /* Aligns with text if needed */
+    transition: transform 0.3s ease; /* Smooth scaling on hover */
+}
+
+.logo:hover {
+    transform: scale(1.05); /* Slight zoom on hover for interactivity */
+}
+
+/* Responsive adjustments */
+@media (max-width: 900px) {
+    .logo {
+        height: 35px; /* Slightly smaller on medium screens */
+    }
+}
+
+@media (max-width: 600px) {
+    .logo {
+        height: 80px; /* Smaller on mobile */
+    }
+}
         /* Reuse styles from other pages */
         body {
             background: linear-gradient(0deg, #1e3c72, #2a5298);
@@ -243,7 +266,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="brand"><i class="fas fa-atom"></i> Periodic Table</div>
+        <div class="brand"><img src="logo.png" alt="Modern Periodic Table" class="logo"></i> Periodic Table</div>
         <button class="hamburger" aria-label="Open menu" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </button>
